--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,18 @@ a:hover, a:focus {
   display: block;
   text-align: center;
 }
+#post-section .post-comment-section {
+  padding: 30px;
+  background-color: #e5e5e5;
+  margin-top: 10px;
+}
+.post-comment-section h2 {
+  padding-bottom: 10px;
+  color: #655c5d;
+  letter-spacing: -1px;
+  word-spacing: 3px;
+  border-bottom: 4px solid #655c5d;
+}
 
 /* Footer */
 footer {
